// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated TabStops Results Detect and display out of order failures 1`] = `
<DocumentFragment>
  <div
    id="insights-shadow-container"
  >
    <link
      href="{{EXTENSION_URL_BASE}}/injected/styles/default/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <link
      href="{{EXTENSION_URL_BASE}}/bundle/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <div
      class="insights-container insights-highlight-container insights-tab-stops"
    >
      <svg
        height="720px"
        width="1280px"
      >
        <defs>
          <filter
            filterUnits="userSpaceOnUse"
            id="insights-tab-stops-solid-shadow"
          >
            <femorphology
              in="SourceGraphic"
              operator="dilate"
              radius="1"
              result="expand"
            />
            <feoffset
              dx="1"
              dy="0"
              in="expand"
              result="shadow_1"
            />
            <feoffset
              dx="-1"
              dy="0"
              in="expand"
              result="shadow_2"
            />
            <feoffset
              dx="0"
              dy="1"
              in="expand"
              result="shadow_3"
            />
            <feoffset
              dx="0"
              dy="-1"
              in="expand"
              result="shadow_4"
            />
            <femerge
              result="shadow"
            >
              <femergenode
                in="shadow_1"
              />
              <femergenode
                in="shadow_2"
              />
              <femergenode
                in="shadow_3"
              />
              <femergenode
                in="shadow_4"
              />
              <femergenode
                in="expand"
              />
            </femerge>
            <feflood
              flood-color="white"
            />
            <fecomposite
              in2="shadow"
              operator="in"
              result="shadow"
            />
            <femerge>
              <femergenode
                in="shadow"
              />
              <femergenode
                in="SourceGraphic"
              />
            </femerge>
          </filter>
        </defs>
        <ellipse
          class="insights-svg-focus-indicator"
          cx="70"
          cy="26.5"
          fill="transparent"
          rx="16"
          ry="16"
          stroke="#C71585"
          stroke-width="2"
        />
        <g>
          <rect
            class="insights-highlight-text failure-label"
            fill="#E81123"
            height="10px"
            rx="3px"
            width="10px"
            x="80"
            y="82.5"
          />
          <text
            class="insights-highlight-text failure-label"
            fill="#FFFFFF"
            font-size="10"
            font-weight="undefined"
            x="83.5"
            y="90.5"
          >
            !
          </text>
        </g>
        <ellipse
          class="insights-svg-focus-indicator"
          cx="70.4375"
          cy="140.5"
          fill="transparent"
          rx="16"
          ry="16"
          stroke="#C71585"
          stroke-width="2"
        />
        <line
          class="insights-svg-line"
          filter="url(#insights-tab-stops-solid-shadow)"
          stroke="#C71585"
          stroke-dasharray="7 2"
          stroke-width="3"
          x1="70.07675382074842"
          x2="70.36074617925158"
          y1="46.49985272073273"
          y2="120.50014727926727"
        />
        <g>
          <rect
            class="insights-highlight-text failure-label"
            fill="#E81123"
            height="10px"
            rx="3px"
            width="10px"
            x="80"
            y="44.5"
          />
          <text
            class="insights-highlight-text failure-label"
            fill="#FFFFFF"
            font-size="10"
            font-weight="undefined"
            x="83.5"
            y="52.5"
          >
            !
          </text>
        </g>
        <ellipse
          class="insights-svg-focus-indicator"
          cx="70"
          cy="102.5"
          fill="#ffffff"
          rx="16"
          ry="16"
          stroke="#E81123"
          stroke-width="2"
        />
        <line
          class="insights-svg-line"
          filter="url(#insights-tab-stops-solid-shadow)"
          stroke="#C71585"
          stroke-dasharray="7 2"
          stroke-width="3"
          x1="70.20725210160197"
          x2="70.23024789839803"
          y1="120.5013253962848"
          y2="122.4986746037152"
        />
        <g>
          <rect
            class="insights-highlight-text failure-label"
            fill="#E81123"
            height="10px"
            rx="3px"
            width="10px"
            x="80"
            y="44.5"
          />
          <text
            class="insights-highlight-text failure-label"
            fill="#FFFFFF"
            font-size="10"
            font-weight="undefined"
            x="83.5"
            y="52.5"
          >
            !
          </text>
        </g>
        <ellipse
          class="insights-svg-focus-indicator"
          cx="70"
          cy="64.5"
          fill="#ffffff"
          rx="16"
          ry="16"
          stroke="#E81123"
          stroke-width="2"
        />
        <line
          class="insights-svg-line"
          filter="url(#insights-tab-stops-solid-shadow)"
          stroke="#C71585"
          stroke-dasharray="7 2"
          stroke-width="3"
          x1="70"
          x2="70"
          y1="82.5"
          y2="84.5"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Automated TabStops Results Detect and display unreachable elements failures 1`] = `
<DocumentFragment>
  <div
    id="insights-shadow-container"
  >
    <link
      href="{{EXTENSION_URL_BASE}}/injected/styles/default/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <link
      href="{{EXTENSION_URL_BASE}}/bundle/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <div
      class="insights-container insights-highlight-container insights-tab-stops"
    >
      <svg
        height="720px"
        width="1280px"
      >
        <defs>
          <filter
            filterUnits="userSpaceOnUse"
            id="insights-tab-stops-solid-shadow"
          >
            <femorphology
              in="SourceGraphic"
              operator="dilate"
              radius="1"
              result="expand"
            />
            <feoffset
              dx="1"
              dy="0"
              in="expand"
              result="shadow_1"
            />
            <feoffset
              dx="-1"
              dy="0"
              in="expand"
              result="shadow_2"
            />
            <feoffset
              dx="0"
              dy="1"
              in="expand"
              result="shadow_3"
            />
            <feoffset
              dx="0"
              dy="-1"
              in="expand"
              result="shadow_4"
            />
            <femerge
              result="shadow"
            >
              <femergenode
                in="shadow_1"
              />
              <femergenode
                in="shadow_2"
              />
              <femergenode
                in="shadow_3"
              />
              <femergenode
                in="shadow_4"
              />
              <femergenode
                in="expand"
              />
            </femerge>
            <feflood
              flood-color="white"
            />
            <fecomposite
              in2="shadow"
              operator="in"
              result="shadow"
            />
            <femerge>
              <femergenode
                in="shadow"
              />
              <femergenode
                in="SourceGraphic"
              />
            </femerge>
          </filter>
        </defs>
        <ellipse
          class="insights-svg-focus-indicator"
          cx="70"
          cy="16.5"
          fill="#ffffff"
          rx="16"
          ry="16"
          stroke="#777777"
          stroke-width="2"
        />
        <text
          class="insights-svg-focus-indicator-text"
          fill="#000000"
          text-anchor="middle"
          x="70"
          y="21.5"
        >
          1
        </text>
        <ellipse
          class="insights-svg-focus-indicator"
          cx="70"
          cy="34.5"
          fill="#ffffff"
          rx="16"
          ry="16"
          stroke="#777777"
          stroke-width="2"
        />
        <text
          class="insights-svg-focus-indicator-text"
          fill="#000000"
          text-anchor="middle"
          x="70"
          y="39.5"
        >
          2
        </text>
        <line
          class="insights-svg-line"
          filter="url(#insights-tab-stops-solid-shadow)"
          stroke="#777777"
          stroke-width="2"
          x1="70"
          x2="70"
          y1="36.5"
          y2="14.5"
        />
        <ellipse
          class="insights-svg-focus-indicator"
          cx="70"
          cy="52.5"
          fill="#ffffff"
          rx="16"
          ry="16"
          stroke="#777777"
          stroke-width="2"
        />
        <text
          class="insights-svg-focus-indicator-text"
          fill="#000000"
          text-anchor="middle"
          x="70"
          y="57.5"
        >
          5
        </text>
        <ellipse
          class="insights-svg-focus-indicator"
          cx="70.4375"
          cy="70.5"
          fill="transparent"
          rx="16"
          ry="16"
          stroke="#C71585"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
